opa/probes-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredProbes
metadata:
  name: must-have-probes
  labels:
    app: self-healing
    owner: prasanna
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
